Добавлена работа с бд, реализован алгоритм

--- a/Task/src/main/resources/templates/main/index.html
+++ b/Task/src/main/resources/templates/main/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Getting Started: Handling Form Submission</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 </head>
 <body>
 
@@ -16,7 +17,7 @@
         <label>Строка 2</label>
         <input type="text" name="str2" placeholder="example">
     </div>
-    <button>Submit</button>
+    <button>Сравнить</button>
 </form>
 </body>
 </html>
