Добавил разбиение на классы
также пофиксил баг алгоритма

--- a/Task/src/main/resources/templates/main/index.html
+++ b/Task/src/main/resources/templates/main/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <h2>Сравни строки</h2>
-<form action="main"  method="post">
+<form action="http://localhost:8081/requests/main"  method="post">
     <div>
         <label>Строка 1</label>
         <input type="text" name="str1" placeholder="example">
@@ -17,7 +17,7 @@
         <label>Строка 2</label>
         <input type="text" name="str2" placeholder="example">
     </div>
-    <button>Сравнить</button>
+    <button >Сравнить</button>
 </form>
 </body>
 </html>
