--- a/Task/src/main/resources/templates/index.html
+++ b/Task/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Getting Started: Handling Form Submission</title>
+    <title>Сравни строки</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 </head>
@@ -18,6 +18,9 @@
         <input type="text" name="str2" placeholder="example">
     </div>
     <button >Сравнить</button>
+</form>
+<form action="http://localhost:8081/requests/res"  method="get">
+    <button>Результат</button>
 </form>
 </body>
 </html>
