--- a/Task/src/main/resources/templates/index.html
+++ b/Task/src/main/resources/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Сравни строки</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
 
@@ -21,6 +22,9 @@
 </form>
 <form action="http://localhost:8081/requests/res"  method="get">
     <button>Результат</button>
+</form>
+<form action="/logout"  method="post">
+    <button>Выход</button>
 </form>
 </body>
 </html>
