Сделан вывод на экран, переделаны логи
Вывод на экран нуждается в улучшении.
В логи PostRequest добавлено поле даты и времени
Также добавлены заготовки под регистрацию

--- a/Task/src/main/resources/templates/result.html
+++ b/Task/src/main/resources/templates/result.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 
-<h2>Сравнение строк</h2>
-<div>
-  <p>Давай произведем аутентификацию?</p>
-</div>
+<td>
+  <select name="field1">
+    {{#list}}<option>{{.}}</option>{{/list}}
+  </select>
+</td>
 
-<form action="http://localhost:8081/login"  method="get">
-  <button>Аутентификация</button>
+<form action="http://localhost:8081/requests/main"  method="get">
+  <button>Назад</button>
 </form>
 </body>
 </html>
