--- a/Task/src/main/resources/templates/login.html
+++ b/Task/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     </div>
     <div><input class="btn btn-lg btn-primary btn-block" type="submit" value="Войти"/></div>
 </form>
-<form class="form-signin" th:action="@{/registration}" method="get">
+<form class="form-signin" action="/registration" method="get">
     <div><input class="btn btn-lg btn-primary btn-block" type="submit" value="Регистрация"/></div>
 </form>
 </body>
